added salary filter - still nullPointerException when min salary in view is empty

--- a/src/main/resources/templates/index-location.html
+++ b/src/main/resources/templates/index-location.html
@@ -13,9 +13,9 @@
   <h4 th:text="${offer.title}" ></h4>
   <h4 th:text="${offer.company}" ></h4>
   <h4 th:text="${offer.location}" ></h4>
-  <h4 th:text="${offer.salary}" ></h4>
+  <h4 th:text="${offer.salaryRange}" ></h4>
   <h4> <a th:href="@{${offer.link}}" >Link do ogłoszenia</a> </h4>
-  <h4 th:text="${offer.link}" ></h4>
+
 
   <h3>=============================</h3>
 </div>
