--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -16,11 +16,6 @@
 
 </form>
 
-<form method="get" th:action="@{/index/location}">
-
-    <button class="btn btn-primary" type="submit">Offers filtered by location</button>
-
-</form>
 
 <form method="get" th:action="@{/index/location}" th:object="${locationDto}">
 
@@ -28,6 +23,21 @@
         Name of the city to filter by (or zdalna):
         <input type="text" th:field="*{location}"/>
     </label>
+    <button class="btn btn-primary" type="submit">Get offers</button>
+
+</form>
+
+<form method="get" th:action="@{/index/salary}" th:object="${salaryDto}">
+
+    <label>
+        Min salary:
+        <input type="number" th:field="*{minSalary}"/>
+    </label>
+    <label>
+        Max Salary:
+        <input type="number" th:field="*{maxSalary}"/>
+    </label>
+    <button class="btn btn-primary" type="submit">Get offers</button>
 
 </form>
 </body>
