- reworked view and entity - added creating entity object - changed service to work on entitiy objects, instead of jobOffer objects -slight rework to populateRepository method - fixed null pointer when minSalary field was left empty, deleted default assignments for minSalary and maxSalary, those fields can now be empty

--- a/src/main/resources/templates/index-salary.html
+++ b/src/main/resources/templates/index-salary.html
@@ -13,7 +13,8 @@
     <h4 th:text="${offer.title}" ></h4>
     <h4 th:text="${offer.company}" ></h4>
     <h4 th:text="${offer.location}" ></h4>
-    <h4 th:text="${offer.salaryRange}" ></h4>
+    <h4 th:text="${offer.minSalary}" ></h4>
+    <h4 th:text="${offer.maxSalary}" ></h4>
     <h4> <a th:href="@{${offer.link}}" >Link do ogłoszenia</a> </h4>
 
 
