--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,8 @@
     <h4 th:text="${offer.title}" ></h4>
     <h4 th:text="${offer.company}" ></h4>
     <h4 th:text="${offer.location}" ></h4>
-    <h4 th:text="${offer.salaryRange}" ></h4>
+    <h4 th:text="${offer.minSalary}" ></h4>
+    <h4 th:text="${offer.maxSalary}" ></h4>
     <h4> <a th:href="@{${offer.link}}" >Link do ogłoszenia</a> </h4>
 
 
