- refactored filtering, now using one method and one dto for all parameters - cleaned up structure in classes and html`s - link creation moved from model/entity to individual scrapers

--- a/src/main/resources/templates/main-page-filtered.html
+++ b/src/main/resources/templates/main-page-filtered.html
@@ -5,7 +5,7 @@
 <script src="/webjars/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Main page</title>
+    <title>Main page filtered</title>
 </head>
 <body>
 
@@ -59,31 +59,5 @@
     </tfoot>
 </table>
 
-
-
-
-<!--<form method="get" th:action="@{/index/location}" th:object="${locationDto}">-->
-
-<!--    <label>-->
-<!--        Name of the city to filter by (or zdalna):-->
-<!--        <input type="text" th:field="*{location}"/>-->
-<!--    </label>-->
-<!--    <button class="btn btn-primary" type="submit">Get offers</button>-->
-
-<!--</form>-->
-
-<!--<form method="get" th:action="@{/index/salary}" th:object="${salaryDto}">-->
-
-<!--    <label>-->
-<!--        Min salary:-->
-<!--        <input type="number" th:field="*{minSalary}"/>-->
-<!--    </label>-->
-<!--    <label>-->
-<!--        Max Salary:-->
-<!--        <input type="number" th:field="*{maxSalary}"/>-->
-<!--    </label>-->
-<!--    <button class="btn btn-primary" type="submit">Get offers</button>-->
-
-<!--</form>-->
 </body>
 </html>
