--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -17,7 +17,7 @@
 
 </form>
 
-<form method="get" th:action="@{/filtered}" th:object="${filterParamsDto}">
+<form method="get" th:action="@{/listOffers}" th:object="${filterParamsDto}">
 
     <label>
         Name of the city to filter by (or zdalna):
