--- a/src/main/resources/templates/main-page-paginated.html
+++ b/src/main/resources/templates/main-page-paginated.html
@@ -9,34 +9,48 @@
 </head>
 <body>
 
-<h1>Welcome to Junior Java Developer Job Offer Scraper</h1>
-
-<form method="get" th:action="@{/}">
-
-    <button class="btn btn-primary" type="submit">All offers</button>
-
-</form>
-
-<form method="get" th:action="@{/listOffers}" th:object="${filterParamsDto}">
-
-    <label>
-        Name of the city to filter by (or zdalna):
-        <input type="text" th:field="*{location}"/>
-    </label>
-    <label>
-        Min salary:
-        <input type="number" th:field="*{minSalary}"/>
-    </label>
-    <label>
-        Max Salary:
-        <input type="number" th:field="*{maxSalary}"/>
-    </label>
-    <button class="btn btn-primary" type="submit">Get offers</button>
+<section class="hero is-small is-primary">
+    <div class="hero-body">
+        <div class="container has-text-centered">
+            <p class="title">
+                Welcome to Junior Java Developer Job Offer Scraper
+            </p>
+        </div>
+    </div>
+</section>
 
 
-</form>
+<section class="section">
+    <form method="get" th:action="@{/}">
+        <div class="buttons is-centered">
+            <button class="button is-success is-rounded is-large" type="submit">All offers</button>
+        </div>
+    </form>
+</section>
 
-<table class="table is-striped is-hoverable">
+<div class="container is-centered">
+    <div class="container has-text-centered">
+        <form method="get" th:action="@{/listOffers}" th:object="${filterParamsDto}">
+
+
+            <label>
+                <input class="input is-primary is-medium" type="text" placeholder="City name / zdalna" th:field="*{location}"/>
+            </label>
+
+            <label>
+                <input class="input is-primary is-medium" type="number" placeholder="Minimum salary" th:field="*{minSalary}"/>
+            </label>
+            <label>
+                <input class="input is-primary is-medium" type="number" placeholder="Maximum salary" th:field="*{maxSalary}"/>
+            </label>
+            <div>
+                <button class="button is-success is-rounded is-medium" type="submit">Get offers</button>
+            </div>
+        </form>
+    </div>
+</div>
+
+<table class="table is-striped is-hoverable is-fullwidth">
     <thead>
     <tr>
         <th>Job Title</th>
