--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -10,7 +10,7 @@
 <body>
 
 
-<section class="hero is-small is-primary">
+<section class="hero is-small is-success">
     <div class="hero-body">
         <div class="container has-text-centered">
             <p class="title">
@@ -35,14 +35,17 @@
 
 
             <label>
-                <input class="input is-primary is-medium" type="text" placeholder="City name / zdalna" th:field="*{location}"/>
+                <input class="input is-primary is-medium" type="text" placeholder="City name / zdalna"
+                       th:field="*{location}"/>
             </label>
 
             <label>
-                <input class="input is-primary is-medium" type="number" placeholder="Minimum salary" th:field="*{minSalary}"/>
+                <input class="input is-primary is-medium" type="number" placeholder="Minimum salary"
+                       th:field="*{minSalary}"/>
             </label>
             <label>
-                <input class="input is-primary is-medium" type="number" placeholder="Maximum salary" th:field="*{maxSalary}"/>
+                <input class="input is-primary is-medium" type="number" placeholder="Maximum salary"
+                       th:field="*{maxSalary}"/>
             </label>
             <div>
                 <button class="button is-success is-rounded is-medium" type="submit">Get offers</button>
@@ -51,29 +54,34 @@
     </div>
 </div>
 
-
-<table class="table is-striped is-hoverable is-fullwidth">
-    <thead>
-    <tr>
-        <th>Job Title</th>
-        <th>Company</th>
-        <th>Location</th>
-        <th>Minimum Salary</th>
-        <th>Maximum Salary</th>
-        <th>Link</th>
-    </tr>
-    </thead>
-    <tfoot>
-    <tr th:each="offer: ${offers}">
-        <td th:text="${offer.title}"></td>
-        <td th:text="${offer.company}"></td>
-        <td th:text="${offer.location}"></td>
-        <td th:text="${offer.minSalary}"></td>
-        <td th:text="${offer.maxSalary}"></td>
-        <td><a th:href="@{${offer.link}}">Link do ogłoszenia</a></td>
-    </tr>
-    </tfoot>
-</table>
+<section class="section">
+    <div class="columns is-centered">
+        <div class="column is-narrow">
+            <table class="table is-striped is-hoverable is-narrow">
+                <thead>
+                <tr>
+                    <th>Job Title</th>
+                    <th>Company</th>
+                    <th>Location</th>
+                    <th>Minimum Salary</th>
+                    <th>Maximum Salary</th>
+                    <th>Link</th>
+                </tr>
+                </thead>
+                <tfoot>
+                <tr th:each="offer: ${offers}">
+                    <td th:text="${offer.title}"></td>
+                    <td th:text="${offer.company}"></td>
+                    <td th:text="${offer.location}"></td>
+                    <td th:text="${offer.minSalary}"></td>
+                    <td th:text="${offer.maxSalary}"></td>
+                    <td><a th:href="@{${offer.link}}">Link do ogłoszenia</a></td>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+</section>
 
 
 </body>
